--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.18",
     "nuxt": "^4.3.0",
-    "tailwindcss": "^4.1.18",
     "vue": "^3.5.27",
     "vue-router": "^4.6.4"
+  },
+  "devDependencies": {
+    "@nuxtjs/seo": "^3.4.0",
+    "@nuxtjs/tailwindcss": "^6.14.0"
   }
 }
